run.sh: add JVM param --add-opens java.base/java.lang=ALL-UNNAMED